src/games/wake-up-mythra/deploy/prod/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chunkies-gateway
  namespace: tenant-guardian-prod
  labels:
    app.kubernetes.io/name: chunkies-gateway
    app.kubernetes.io/part-of: guardian
    guardian.dev/product: mythra
    guardian.dev/stage: prod
spec:
  selector:
    app.kubernetes.io/name: chunkies-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: wt
      port: 4433
      targetPort: wt
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: chunkies-gateway-metrics
  namespace: tenant-guardian-prod
  labels:
    app.kubernetes.io/name: chunkies-gateway
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: guardian
    guardian.dev/product: mythra
    guardian.dev/stage: prod
spec:
  selector:
    app.kubernetes.io/name: chunkies-gateway
  ports:
    - name: metrics
      port: 9633
      targetPort: metrics
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: chunkies-park-metrics
  namespace: tenant-guardian-prod
  labels:
    app.kubernetes.io/name: chunkies-park
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: guardian
    guardian.dev/product: mythra
    guardian.dev/stage: prod
spec:
  selector:
    app.kubernetes.io/name: chunkies-park
  ports:
    - name: metrics
      port: 9637
      targetPort: metrics
      protocol: TCP
